--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "^5.0.2",
     "@midudev/tailwind-animations": "^0.0.7",
+    "@vercel/analytics": "^1.3.2",
     "astro": "^4.4.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
