--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.6",
+    "@astrojs/react": "^4.1.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^8.0.1",
     "@fontsource-variable/onest": "^5.0.2",
     "@midudev/tailwind-animations": "^0.0.7",
+    "@vercel/analytics": "^1.4.1",
     "astro": "^4.4.8",
+    "next": "^15.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
